fixed top line wrapping in chat bar

--- a/css/dark/chat.css
+++ b/css/dark/chat.css
@@ -200,6 +200,7 @@ button#send {
 .chat-bar .chat-message .chat-topbar {
     font-size: 0.8rem;
     color: #888888;
+    white-space: nowrap;
 }
 
 .chat-bar .chat-message .chat-topbar .username {
