--- a/css/default/chat.css
+++ b/css/default/chat.css
@@ -201,6 +201,7 @@ button#send {
 .chat-bar .chat-message .chat-topbar {
     font-size: 0.8rem;
     color: #888888;
+    white-space: nowrap;
 }
 
 .chat-bar .chat-message .chat-topbar .username {
